# SocExplorer

./: .hgignore  .hgsub  .hgsubstate  CREDITS  Doxyfile  README  README.md  SocExplorer.pro  TODO  meson.build
Qt_Creator_Wizard/SocExplorerPlugin/: plugin.cpp  plugin.h  project.pro  wizard.xml
build_cfg/: socexplorer.pri
doc/PythonExamples/: LEON3_LOAD.py  PythonPlugin.py  SocExplorerPlot.py  SocExplorerPlot2.py  SocExplorerPlot3.py  lppmonplot.py  (+4 more)
ressources/: Grlib.xml  IAP.xml  LPP.xml  SocExplorer.qrc  SocExplorerWin.qrc
src/: aboutsocexplorer.cpp  aboutsocexplorer.h  dockablepluginmanager.cpp  dockablepluginmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindowsmenubar.cpp  mainwindowsmenubar.h  meson.build  sessionmanagerdialog.cpp  sessionmanagerdialog.h  sessionmanagerdialog.ui  socexplorer.h  socexplorercoresettingsgui.cpp  socexplorercoresettingsgui.h  socexplorercoresettingsgui.ui  src.pro  toolbar.cpp  toolbar.h  toolbarcontainer.cpp  toolbarcontainer.h
src/NicePyConsole/: NicePyConsole.cpp  NicePyConsole.h  NicePyConsole.pri  NicePyConsole.pro  PygmentsHighlighter.cpp  PygmentsHighlighter.py  PythonCompleter.cpp  PythonCompleter.py  SimpleConsole.cpp  SimpleConsole.h  module_completion.py
src/PyWdgt/: pythonconsole.cpp  pythonconsole.h  pythonqtscriptingconsoledandd.cpp  pythonqtscriptingconsoledandd.h
src/SocExplorerEngine/: PySocExplorerEngine.h  SocExplorerEngine.pro  meson.build  pythonQtgeneratorCfg.txt  pythongenerator.sh
src/SocExplorerEngine/PeripheralWidget/: meson.build
src/SocExplorerEngine/PeripheralWidget/ressources/: peripheralwidget.qrc
src/SocExplorerEngine/PeripheralWidget/src/: collapsableperipheralwidget.cpp  collapsableperipheralwidget.h  collapsableperipheralwidget.ui  peripheralwidget.cpp  peripheralwidget.h  registerwidget.cpp  registerwidget.h  socregsviewer.cpp  socregsviewer.h  socregsviewernew.cpp  socregsviewernew.h  socregsviewernew.ui
src/SocExplorerEngine/PeripheralWidget/test/: main.cpp  mainwindow.cpp  mainwindow.h
src/SocExplorerEngine/SOC/: registerdata.cpp  registerdata.h  socclk.cpp  socclk.h  socexplorerenumdevice.cpp  socexplorerenumdevice.h  socmodel.cpp  socmodel.h
src/SocExplorerEngine/XmlEngine/: XMLdata.cpp  XMLdata.h  XMLmodel.cpp  XMLmodel.h  xmldriver.cpp  xmldriver.h
src/SocExplorerEngine/engine/: socexplorerconfigkeys.h  socexplorerengine.cpp  socexplorerengine.h  socexplorergui.cpp  socexplorergui.h  socexplorersettings.cpp  socexplorersettings.h  socexplorersettingsdialog.cpp  socexplorersettingsdialog.h  socexplorersettingsdialog.ui  socexplorerxmlfile.cpp  socexplorerxmlfile.h
src/SocExplorerEngine/memtester/: memtester.cpp  memtester.h
src/SocExplorerEngine/pluginManagerWdgt/: plugininfoswdgt.cpp  plugininfoswdgt.h  pluginlist.cpp  pluginlist.h  pluginmanagerWDGT.cpp  pluginmanagerWDGT.h  plugintree.cpp  plugintree.h
src/SocExplorerEngine/pluginloader/: pluginloader.cpp  pluginloader.h  pluginscache.cpp  pluginscache.h
src/SocExplorerEngine/pluginloader/unix/: unixpluginloader.cpp  unixpluginloader.h
src/SocExplorerEngine/plugins/: genericPySysdriver.cpp  genericPySysdriver.h  socexplorerplugin.cpp  socexplorerplugin.h  socexplorerplugin.prf
src/SocExplorerEngine/pluginsInterface/: socexplorerplugininterface.cpp  socexplorerplugininterface.h  socexplorerplugininterface_global.h
src/SocExplorerEngine/proxy/: socexplorerproxy.cpp  socexplorerproxy.h
src/SocExplorerEngine/pythonQtOut/generated_cpp/PySocExplorerEngine/: PySocExplorerEngine.pri  PySocExplorerEngine0.cpp  PySocExplorerEngine0.h  PySocExplorerEngine_init.cpp
src/SocExplorer_TCP_Terminal/: SocExplorer_TCP_Terminal.pro  main.cpp  mainwindow.cpp  mainwindow.h
src/common/: PySocExplorer.h  SocExplorerPlot.cpp  SocExplorerPlot.h  abstractbinfile.cpp  abstractbinfile.h  abstractexecfile.cpp  abstractexecfile.h  common.pro  gresbstatusquery.h  memsizewdgt.cpp  memsizewdgt.h  meson.build  mingwQtgenCmd.sh  pythonQtgeneratorCfg.txt  pythongenerator.sh  qhexspinbox.cpp  qhexspinbox.h  qipdialogbox.cpp  qipdialogbox.h  qsvgicon.cpp  qsvgicon.h  qtablewidgetintitem.cpp  qtablewidgetintitem.h  rmapoperations.cpp  rmapoperations.h  tcp_terminal_client.cpp  tcp_terminal_client.h
src/common/BinFile/: binaryfile.cpp  binaryfile.h  binaryfilewidget.cpp  binaryfilewidget.h  binaryfilewidget.ui
src/common/elf/: elffile.cpp  elffile.h  elffilewidget.cpp  elffilewidget.h  elffilewidget.ui  elfinfowdgt.cpp  elfinfowdgt.h  elfparser.cpp  elfparser.h
src/common/genericBinaryFiles/: abstractbinfile.h  filelist.cpp  filelist.h  genericbinaryfilewidget.cpp  genericbinaryfilewidget.h  genericbinaryfilewidget.ui  qtablewidgetintitem.cpp  qtablewidgetintitem.h  qvpushbutton.cpp  qvpushbutton.h
src/common/genericBinaryFiles/BinFile/: binaryfile.cpp  binaryfilewidget.cpp
src/common/genericBinaryFiles/elf/: elffile.cpp  elffile.h  elffilewidget.cpp  elffilewidget.h  elffilewidget.ui  elfinfowdgt.cpp  elfinfowdgt.h  elfparser.cpp  elfparser.h
src/common/genericBinaryFiles/elf/libelfWin32/include/libelf/: elf_repl.h
src/common/genericBinaryFiles/ressources/: genericBinaryFiles.qrc
src/common/genericBinaryFiles/srec/: srecfile.cpp  srecfile.h  srecfilewidget.cpp  srecfilewidget.h  srecfilewidget.ui
src/common/lppserial/src/: RS232.h  RS232_unix.c
src/common/pythonQtOut/generated_cpp/PySocExplorer/: PySocExplorer.pri  PySocExplorer0.cpp  PySocExplorer0.h  PySocExplorer_init.cpp
src/common/qhexedit/: qhexedit.cpp  qhexedit.h  qhexedit_p.cpp  qhexedit_p.h
src/common/srec/: srecfile.cpp  srecfile.h  srecfilewidget.cpp  srecfilewidget.h  srecfilewidget.ui
src/regsExplorer/: regsexplorer.cpp  regsexplorer.h  regsexplorercfg.cpp  regsexplorercfg.h  regsexplorernew.ui  regsviewer.cpp  regsviewer.h
subprojects/: libelf.wrap  pythonqt.wrap
translations/: socexplorer_en.ts  socexplorer_fr.ts
ucWidgets/: ucWidgets.pro  ucwidgets.cpp  ucwidgets.h
unixcfg/: SocExplorer.appdata.xml  SocExplorer.desktop  SocExplorer.spec  plugins.conf  socexplorer.appdata.xml  socexplorer.desktop
win32cfg/: SocExplorer.nsi  socexplorer.rc
(+7 files in other folders)
